--- a/backend/market-garden/pom.xml
+++ b/backend/market-garden/pom.xml
@@ -19,6 +19,7 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
@@ -80,6 +81,10 @@
             <artifactId>assertj-db</artifactId>
             <version>2.0.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId>
         </dependency>
     </dependencies>
     <build>
